--- a/deploy/GAMMA.yaml
+++ b/deploy/GAMMA.yaml
@@ -1,67 +1,67 @@
 # Input
 input:
   trait: "T2D_chr11"
-  GAMMA_HOME: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing"
-  gwas_raw: "${GAMMA_HOME}/data/GWAS_T2D_chr11.txt"
-  gwas: "${GAMMA_HOME}/data/GWAS_T2D_chr11.txt"
-  output: "${GAMMA_HOME}/output" 
+  chr: "11"
+  gwas_raw: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/GWAS_T2D_chr11.txt"
+  gwas: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/GWAS_T2D_chr11.txt"
+  output: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/results" 
 script:
-  work_path: "${GAMMA_HOME}/sbatch_test"
-  path: "${GAMMA_HOME}/scripts"
+  work_path: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sbatch_test"
+  path: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/scripts"
 yaml:
-  template: "${GAMMA_HOME}/deploy/GAMMA.yaml"
-  config: "${GAMMA_HOME}/deploy/GAMMA.yaml"
+  template: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/deploy/GAMMA.yaml"
+  config: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/deploy/GAMMA.yaml"
 # Not changed ---- :
 environment:
-  R_421: "GAMMA_r"
-  python_pops: "GAMMA_pops"
-  python_depict: "GAMMA_depict"
-  python_rwr_ppr: "GAMMA_NetworkX"
-  python_ldsc: "GAMMA_ldsc"
-  post_smr: "GAMMA_depict"
-  python_ml: "GAMMA_ML"
+  # R_421: "GAMMA_r"
+  # python_pops: "GAMMA_pops"
+  # python_depict: "GAMMA_depict"
+  # python_rwr_ppr: "GAMMA_NetworkX"
+  # python_ldsc: "GAMMA_ldsc"
+  # post_smr: "GAMMA_depict"
+  # python_ml: "GAMMA_ML"
+  R_421:  "Drugsets_py385"
+  python_pops: "pops"
+  python_depict: "depict"
+  python_rwr_ppr: "NetworkX"
+  python_ldsc: "ldsc"
+  post_smr: "depict"
+  python_ml: "py39"
 software:
-  plink1_9: "${GAMMA_HOME}/guoyazhou/software/plink/plink1.90beta/plink_1.90_beta"
-  plink2: "${GAMMA_HOME}/guoyazhou/software/plink/plink2.00alpha/plink2"
-  gcta: "${GAMMA_HOME}/guoyazhou/software/gcta/gcta-1.94.1-linux-kernel-3-x86_64/gcta-1.94.1"
-  smr: "${GAMMA_HOME}/yangwen/alpha-software/smr/smr-1.3.2-alpha7-linux"
-  fusion: "${GAMMA_HOME}/guoyazhou/software/FUSION/fusion_twas-master/FUSION.assoc_test.R"
-  coloc: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/COLOC.R"
-  magma: "${GAMMA_HOME}/guoyazhou/software/MAGMA/magma"
-  pops: "${GAMMA_HOME}/guoyazhou/software/PoPS/pops-master/pops.py"
-  depict: "${GAMMA_HOME}/guoyazhou/software/DEPICT/src/python/depict.py"
-  bedtools: "${GAMMA_HOME}/guoyazhou/anaconda3/bin/bedtools"
-  R_functions: "${GAMMA_HOME}/guoyazhou/software/CommonFunc.r"
-  drugsets: "${GAMMA_HOME}/guoyazhou/software/drugsea/drugsets.py"
-reference:
-  reference_bfile: "${GAMMA_HOME}/guoyazhou/data/Reference/UKB_Reference_genotype/genotype_10k_hg38/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38"
-  reference_all_bim: "${GAMMA_HOME}/sharedata/LD_reference/UKB/genotype_10K/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38_chrALL.bim"
-  reference_bld: "${GAMMA_HOME}/guoyazhou/project_SMR_visualizaiton/script/test_script/run_time_test/bld_format/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38_4Mb"
-  reference_bfile_GRCh37: "${GAMMA_HOME}/sharedata/LD_reference/UKB/genotype_10K/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K"
-  reference_freq: "${GAMMA_HOME}/sharedata/LD_reference/UKB/genotype_10K/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38.frq"
+  plink1_9: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/plink_1.90_beta"
+  plink2: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/plink2"
+  gcta: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/gcta-1.94.1"
+  smr: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/smr-1.3.2-alpha7-linux"
+  fusion: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/FUSION.assoc_test.R"
+  coloc: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/COLOC.R"
+  magma: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/magma"
+  pops: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/pops.py"
+  depict: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/depict.py"
+  bedtools: "/storage/yangjianLab/guoyazhou/anaconda3/bin/bedtools"
+  R_functions: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/CommonFunc.r"
+  magic: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/softwares/magic_functions.r"
 gene:
-  gencode: "${GAMMA_HOME}/qiting/data/annotation/gencode/gencode.v40.GRCh38.gene.annotation.bed"
-  gencode_tss: "${GAMMA_HOME}/qiting/data/Variant2Gene/TSS/gencode.v40.TSS.GRCh38.bed"
-  gamma_gene: "${GAMMA_HOME}/guoyazhou/GAMMA_git/GENCODE/GAMMA_gene_list.txt"
-  gamma_gene_all: "${GAMMA_HOME}/guoyazhou/GAMMA_git/GENCODE/GAMMA_gene_list_all_protein_coding.txt"
+  gencode: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/gene/gencode.v40.GRCh38.gene.annotation.bed"
+  gencode_tss: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/gene/gencode.v40.closestTSS.GRCh38.bed"
+  gamma_gene: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/gene/GAMMA_gene_list.txt"
+  gamma_gene_all: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/gene/GAMMA_gene_list_all_protein_coding.txt"
+reference:
+  reference_bfile: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/reference/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38"
+  reference_bfile_GRCh37: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/reference/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K"
+  reference_all_bim: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/reference/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38_chrALL.bim"
+  reference_freq: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/reference/BED_ukbEUR_imp_v3_INFO0.8_maf0.01_mind0.05_geno0.05_hwe1e6_10K_hg38.frq"
+clumping:
+  field: "P"
 magma:
-  perturb1: "${GAMMA_HOME}/sharedata/Network_data/Perturbation/GPSAdb/gct_format/0.01_DEG_genes.gmt"
-  perturb2: "${GAMMA_HOME}/sharedata/Network_data/Perturbation/GPSAdb/gct_format/0.01_upregulated_genes.gmt"
-  perturb3: "${GAMMA_HOME}/sharedata/Network_data/Perturbation/GPSAdb/gct_format/0.01_downregulated_genes.gmt"
-  gene_annot: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/MAGMA/annotation/genes_GRCh37.genes.annot"
+  gene_annot: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/magma/genes_GRCh37.genes.annot"
 mBAT:
-  gene_list: "${GAMMA_HOME}/guoyazhou/project_new/project_GWAS_to_Gene/mBAT_analysis/script/mBAT_gene_list/glist_ensgid_hg38_v40.txt"
+  gene_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/mBATcombo/glist_ensgid_hg38_v40.txt"
 v2g:
-  Exon_bed: "${GAMMA_HOME}/qiting/data/Variant2Gene/Exon/gencode.v40.GRCh38.exon.bed"
-  ABC_bed: "${GAMMA_HOME}/qiting/data/Variant2Gene/Enhancer-Gene-Linking/ABC/ABC0.015_GRCh38_CHRALL.bed"
-  EpiMap_bed: "${GAMMA_HOME}/qiting/data/Variant2Gene/Enhancer-Gene-Linking/EpiMapLinks/EpiMap_links_by_group.ALL.CHRALL_GRCh38.bed"
-  RoadMap_bed: "${GAMMA_HOME}/qiting/data/Variant2Gene/Enhancer-Gene-Linking/RoadmapLinks/Roadmap_links_GRCh38.bed"
-  PCHiC_bed: "${GAMMA_HOME}/qiting/data/Variant2Gene/PCHi-C/PCHiC_Combined_GRCh38.bed"
-l2g:
-  L2G_column_file: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/L2G_column.r"
-  QTL_name_mapping_file: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/L2G_QTL_name_mapping.txt"
-  gsmr_pQTL_file: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_pQTL.txt"
-  pQTL_epi_file: "${GAMMA_HOME}/sharedata/molecular_QTL/pQTL/freeze1/merged_pQTL_plasma/merged_pQTL_plasma_5pQTL.epi"
+  Exon_bed: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/gene/gencode.v40.GRCh38.exon.bed"
+  ABC_bed: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/e2g_file/ABC0.015_GRCh38_CHRALL.bed"
+  EpiMap_bed: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/e2g_file/EpiMap_links_by_group.ALL.CHRALL_GRCh38.bed"
+  RoadMap_bed: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/e2g_file/Roadmap_links_GRCh38.bed"
+  PCHiC_bed: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/e2g_file/PCHiC_Combined_GRCh38.bed"
 smr:
   maf: 0.01
   peqtl_smr: 5.0e-8
@@ -69,60 +69,66 @@ smr:
   batch_num: 1
   smr_multi_index: TRUE
   heidi_index: TRUE
-  QTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/QTL_list.txt"
-  eQTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/eQTL_list.txt"
-  sQTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/sQTL_list.txt"
-  pQTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/pQTL_list.txt"
-  mQTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/mQTL_list.txt"
-mr:
-  enable: False
-  batch_num: 10
-  MR_snp_min: 3
-  QTL_clumped_list: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MR/QTL_clumped/QTL_clumped_list.txt"
-  GSMR_QTL_clumped_list: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MR/QTL_clumped/GSMR_QTL_clumped_list.txt"
+  QTL_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/xQTL_file/user_xQTL_list.txt"
 magic:
   run_magic_index: TRUE
   smr_multi_index: TRUE
   heidi_index: TRUE
-  QTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MAGIC_data/QTL_data/QTL_list.txt"
-  QTL_list_lite: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MAGIC_data/QTL_lite_besd/QTL_list_lite.txt"  
-  QTL_name_list: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MAGIC_data/QTL_data/QTL_data_name_list.txt"
-  R_functions: "${GAMMA_HOME}/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/magic_functions.r"
-  CpG_link: "${GAMMA_HOME}/qiting/SMR_Cauchy/link/consensus3/CpG_consensus3.link"
-  hQTL_link: "${GAMMA_HOME}/qiting/SMR_Cauchy/link/consensus3/hQTL_consensus3.link"
-  caQTL_link: "${GAMMA_HOME}/qiting/SMR_Cauchy/link/consensus3/caQTL_consensus3.link"
-fusion:
-  munge_sumstats: "${GAMMA_HOME}/guoyazhou/software/LDSC/ldsc/munge_sumstats.py"
-  ldsc_resources_dir: "${GAMMA_HOME}/sharedata/LDSC_resource"
-  LDREF: "${GAMMA_HOME}/guoyazhou/software/FUSION/fusion_twas-master/LDREF"
-  QTL_list: "${GAMMA_HOME}/guoyazhou/GAMMA_git/L2G/QTL_data/FUSION_QTL_name.txt"
+  QTL_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/xQTL_file/user_xQTL_list.txt"
+  QTL_name_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/xQTL_file/user_xQTL_name_list.txt"
+  CpG_link: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/magic/CpG_consensus3.link"
+  hQTL_link: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/magic/hQTL_consensus3.link"
+  caQTL_link: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/magic/caQTL_consensus3.link"
 coloc:
-  QTL_dir: "${GAMMA_HOME}/guoyazhou/software/COLOC/data"
+  QTL_dir: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/data/coloc"
+  
+
+
+
+l2g:
+  L2G_column_file: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/L2G_column.r"
+  QTL_name_mapping_file: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git/L2G/QTL_data/L2G_QTL_name_mapping.txt"
+  gsmr_pQTL_file: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_pQTL.txt"
+  pQTL_epi_file: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sharedata/molecular_QTL/pQTL/freeze1/merged_pQTL_plasma/merged_pQTL_plasma_5pQTL.epi"
+
+mr:
+  enable: False
+  batch_num: 10
+  MR_snp_min: 3
+  QTL_clumped_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MR/QTL_clumped/QTL_clumped_list.txt"
+  GSMR_QTL_clumped_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_github/gamma-script/scripts/L2G/MR/QTL_clumped/GSMR_QTL_clumped_list.txt"
+
+fusion:
+  munge_sumstats: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/LDSC/ldsc/munge_sumstats.py"
+  ldsc_resources_dir: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sharedata/LDSC_resource"
+  LDREF: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/FUSION/fusion_twas-master/LDREF"
+  QTL_list: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git/L2G/QTL_data/FUSION_QTL_name.txt"
+
 gsmr:
-  reffile: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_ref_data_ukb.txt"
-  expofile: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_pQTL.txt"
-  expo_dir: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/GSMR/exposure_data"
+  reffile: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_ref_data_ukb.txt"
+  expofile: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git_data/GSMR/data/gsmr_pQTL.txt"
+  expo_dir: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git_data/GSMR/exposure_data"
 pops:
-  gene_annot: "${GAMMA_HOME}/guoyazhou/software/PoPS/pops-master/example/data/utils/gene_annot_jun10.txt"
-  pops_feature: "${GAMMA_HOME}/guoyazhou/software/PoPS/pops-master/pops_all_features_munged/all_pops_features"
-  control_feature: "${GAMMA_HOME}/guoyazhou/software/PoPS/pops-master/example/data/utils/features_jul17_control.txt"
+  gene_annot: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/PoPS/pops-master/example/data/utils/gene_annot_jun10.txt"
+  pops_feature: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/PoPS/pops-master/pops_all_features_munged/all_pops_features"
+  control_feature: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/PoPS/pops-master/example/data/utils/features_jul17_control.txt"
 depict:
-  snp_loc_GRCh37: "${GAMMA_HOME}/guoyazhou/software/DEPICT/snp_loc_b37"
-  cfg_demo: "${GAMMA_HOME}/guoyazhou/GAMMA_git_data/DEPICT/cfg/demo.cfg"
+  snp_loc_GRCh37: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/software/DEPICT/snp_loc_b37"
+  cfg_demo: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git_data/DEPICT/cfg/demo.cfg"
 rwr_ppr:
-  ppi_file: "${GAMMA_HOME}/sharedata/Network_data/PPI/PPI_all.csv"
+  ppi_file: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sharedata/Network_data/PPI/PPI_all.csv"
 gamma:
-  pharmaprojects: "${GAMMA_HOME}/guoyazhou/github/Network/data/clinical_targets/target_indication/Pharmaprojects_2024_05_07.txt"
-  pharmaprojects_nelson: "${GAMMA_HOME}/guoyazhou/GAMMA_git/clinical_success_rate/Pharmaprojects_Nelson_2022.txt"
-  pharmaprojects_0507_shufeng: "${GAMMA_HOME}/sunshufeng/gamma_v4/data/pharmap_processed.csv"
+  pharmaprojects: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/github/Network/data/clinical_targets/target_indication/Pharmaprojects_2024_05_07.txt"
+  pharmaprojects_nelson: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git/clinical_success_rate/Pharmaprojects_Nelson_2022.txt"
+  pharmaprojects_0507_shufeng: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/data/pharmap_processed.csv"
 mesh:
-  gwas_mesh: "${GAMMA_HOME}/guoyazhou/GAMMA_git/GWAS_trait_list/trait_mapping_latest.txt"
+  gwas_mesh: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/guoyazhou/GAMMA_git/GWAS_trait_list/trait_mapping_latest.txt"
 # Model
 model_data:
-  omim: "${GAMMA_HOME}/sunshufeng/gamma_v4/data/OMIM_processed.csv"
-  clinvar: "${GAMMA_HOME}/sunshufeng/gamma_v4/data/clinvar.csv"
-  mgi: "${GAMMA_HOME}/sunshufeng/gamma_v4/data/MGI_processed.csv"
-  gene_features: "${GAMMA_HOME}/sunshufeng/gamma_v4/0.0.3_gene_features.csv"
+  omim: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/data/OMIM_processed.csv"
+  clinvar: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/data/clinvar.csv"
+  mgi: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/data/MGI_processed.csv"
+  gene_features: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/0.0.3_gene_features.csv"
 model_model:
-  model: "${GAMMA_HOME}/sunshufeng/gamma_v4/0.0.1_valid_feature_model.joblib"
-  feature: "${GAMMA_HOME}/sunshufeng/gamma_v4/0.0.2_feature_list.txt"
+  model: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/0.0.1_valid_feature_model.joblib"
+  feature: "/storage/yangjianLab/guoyazhou/github/GAMMA_for_PC_testing/sunshufeng/gamma_v4/0.0.2_feature_list.txt"
